# SMTS

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  client.py  smts.py  utils.py  version.sh
.circleci/: config.yml
awcCloudTrack/awsRunBatch/: benchPaths.txt  make_combined_hostfile.py  make_smts.sh  mpi-run.sh  run-solver-main.sh  run-workerX.sh  run_awsExamples.sh  run_aws_smtsClient.sh  run_example.py  run_splitPreference.sh
awcCloudTrack/buildECSCluster/: build-job-queue.yaml
benchmark/timeout_lra_benchs/: 0084-labyrinth-17-0.smt2.bz2  0092-labyrinth-17-0.smt2.bz2  0100-labyrinth-17-0.smt2.bz2  0165-labyrinth-13-0.smt2.bz2  Braverman-2006CAV-Ex1-int.bpl_Iteration1_Lasso_6-phaseTemplate.smt2.bz2  Braverman-2006CAV-Ex1-int.bpl_Iteration1_Loop_6-phaseTemplate.smt2.bz2  Braverman-2006CAV-Ex1-int.bpl_Iteration1_Loop_7-phaseTemplate.smt2.bz2  LeeJonesBen-Amram-2001POPL-Ex5_true-termination.c_Iteration2_Lasso_4-pieceTemplate.smt2.bz2  _array_single_elem_init.i_4_2_2.bpl_7.smt2.bz2  _overflow1.i_3_8_2.bpl_11.smt2.bz2  _sanfoundry_10_ground.i_6_3_3.bpl_13.smt2.bz2  afagp-fail.t2.c_Iteration1_Lasso_4-pieceTemplate.smt2.bz2  bound-scaled600.bpl_Iteration1_Loop_7-phaseTemplate.smt2.bz2  brp_withassume.t2.c_Iteration8_Loop_4-pieceTemplate.smt2.bz2  brp_withassume.t2.c_Iteration8_Loop_7-phaseTemplate.smt2.bz2  danoint-65.smt2.bz2  ecoliMILPglycerolYices3-100000.smt2.bz2  fixnet-3000.smt2.bz2  fixnet-5000.smt2.bz2  hongyi1.t2.c_Iteration9_Loop_7-phaseTemplate.smt2.bz2  opt1217--16.smt2.bz2  opt1217--27.smt2.bz2  pp08a-7350.smt2.bz2  vpm2-13.75.smt2.bz2
benchmarks/: Ben-Amram-2010LMCS-Ex2.3_true-termination.c_Iteration1_Lasso_3-pieceTemplate.smt2.bz2
ci/: run_travis_opensmtCommands.sh  run_travis_smtsCommands.sh
data/hpc/: mts-cqIncremental-results-2022-08-30-non-lemma_sharingPartitioning-QF_RDL.list.bz2  osmt-3089764c-results-2022-08-19-non-incremental-QF_UF.list.bz2  osmt-40MinuteMaster-results-2022-07-04-non-incremental-QF_LIA.list.bz2  osmt-40MinuteMaster-results-2022-07-04-non-incremental-QF_LRA.list.bz2  osmt-40MinuteMaster-results-2022-07-05-non-incremental-QF_RDL.list.bz2  osmt-40MinuteMaster-results-2022-07-05-non-incremental-QF_UFLIA.list.bz2  osmt-40MinuteMaster-results-2022-07-05-non-incremental-QF_UFLRA.list.bz2  osmt-sequential-results-2022-07-04-non-incremental-QF_IDL.list.bz2  osmt-sequential-results-2022-08-31-non-incremental-QF_UF.list.bz2  smts-caqTempe4fbc29-results-2022-07-07-lemma_sharingpartitioning-QF_IDL.list.bz2  smts-caqTempe4fbc29-results-2022-07-22-lemma_sharingpartitioning-QF_UF.list.bz2  smts-clauseSharing10Lit10Solvers-results-2022-09-30-lemma_sharingNon-partitioning-QF_LIA.list.bz2  smts-clauseSharing10Lit10Solvers-results-2022-10-03-lemma_sharingNon-partitioning-QF_LRA.list.bz2  smts-clauseSharing15Lit10Solver-results-2022-10-03-lemma_sharingNon-partitioning-QF_LIA.list.bz2  smts-clauseSharing15Lit10Solvers-results-2022-10-03-lemma_sharingNon-partitioning-QF_LRA.list.bz2  smts-clauseSharing1Lit-results-2022-11-03-lemma_sharingNon-partitioning-QF_LIA.list.bz2  smts-clauseSharing3Lit10Solvers-results-2022-09-29-lemma_sharingNon-partitioning-QF_LIA.list.bz2  smts-clauseSharing3Lit10Solvers-results-2022-10-03-lemma_sharingNon-partitioning-QF_LRA.list.bz2  smts-clauseSharing5Lit10Solver-results-2022-10-02-lemma_sharingNon-partitioning-QF_LIA.list.bz2  smts-clauseSharing5Lit10Solver-results-2022-10-02-lemma_sharingNon-partitioning-QF_LRA.list.bz2  smts-clauseSharingAndPartitioning10Lit10Solvers-results-2022-10-04-lemma_sharingPartitioning-QF_LIA.list.bz2  smts-clauseSharingAndPartitioning10Lit10Solvers-results-2022-10-04-lemma_sharingPartitioning-QF_LRA.list.bz2  smts-clauseSharingAndPartitioning10Lit10Solvers-results-2022-10-06-lemma_sharingPartitioning-QF_LIA.list.bz2  smts-clauseSharingAndPartitioning10Lit10Solvers-results-2022-10-06-lemma_sharingPartitioning-QF_LRA.list.bz2  smts-clauseSharingAndPartitioning10Lit1Min10Solvers-results-2022-10-08-lemma_sharingPartitioning-QF_LIA.list.bz2  smts-clauseSharingAndPartitioning10Lit2000C10Solvers-results-2022-10-07-lemma_sharingPartitioning-QF_LIA.list.bz2  smts-clauseSharingAndPartitioning1Lit-results-2022-11-03-lemma_sharingPartitioning-QF_LIA.list.bz2  (+67 more)
gui/: .bowerrc  README.md  TODO.txt  app.js  bower.json  config.js  package.json  taskHandler.js
hpc-error/: nec-smt-large-checkpass_pwd-prp-20-50.smt2.bz2  nec-smt_med_checkpass_pwd_prp-13-29.smt2.bz2  nec-smt_med_checkpass_pwd_prp-8-32.smt2.bz2  xs_11_21.smt2  xs_9_19.smt2
runtest/: run-server-client.sh
server/: client.py  config.py  constant.py  dummy_solver.py  exp-partitions.py  framework.py  getUnsolved.py  mk_cactus.py  mk_scatter.py  net.py  oserver.py  run_servers.py  schedular copy.py  schedular.py  schedular2.py  schedularV1.py  schedularV2.py  server.py  smts.py  sql2times.py  utils.py  version.py
src/client/: CMakeLists.txt  FileThread.cpp  FileThread.h  Schedular.cc  Schedular.h  Settings.cpp  Settings.h  SolverProcess.h  SolverServer.cpp  SolverServer.h  main.cpp
src/client/OpenSMT2/: CMakeLists.txt  OpenSMTSolver.cpp  OpenSMTSolver.h  SolverProcess.cpp  SplitProcess.cpp  SplitProcess.h
src/client/Z3/: CMakeLists.txt  SolverProcess.cpp
src/client/Z3Spacer/: CMakeLists.txt  SolverProcess.cpp  fixedpoint.h  main.cpp
src/client/sally/: CMakeLists.txt  SolverProcess.cpp
src/client/spacer/: CMakeLists.txt  SolverProcess.cpp  main.cpp
src/client/yices/: CMakeLists.txt  SolverProcess.cpp
src/lemma_server/: CMakeLists.txt  Lemma.h  LemmaServer.cpp  LemmaServer.h  Node.h  Server.cpp  Server.h  Settings.cpp  Settings.h  main.cpp
src/lib/: CMakeLists.txt  Exception.h  HackingSTL.h  Log.h  Logger.h  Process.cpp  Process.h  SMTSThread.h  Stoppable.hpp  Thread.cpp  Thread.h  Thread_pool.hpp  lib.cpp  lib.h  memory.cpp  memory.h  net.h  sqlite3.cpp  sqlite3.h
src/lib/net/: Address.cpp  Address.h  Header.cpp  Header.h  Lemma.cpp  Lemma.h  NetLemma.cpp  NetLemma.h  Pipe.cpp  Pipe.h  Report.h  Server.cpp  Server.h  Socket.cpp  Socket.h
src/lib/sqlite3/: Connection.cpp  Connection.h  Exception.h  Statement.cpp  Statement.h
(+245 files in other folders)
