add_library(client STATIC Settings.cpp FileThread.cpp SolverServer.cpp)
#include_directories(${opensmt_SOURCE_DIR}/src/api)
target_link_libraries(client Lib)

add_subdirectory(OpenSMT2)
#add_subdirectory(sally)
#add_subdirectory(Z3Spacer)
#add_subdirectory(yices)
target_compile_definitions(client PRIVATE -DSMTS_VERSION=${SMTS_VERSION})
if(DEBUG_SMTS)
    target_compile_definitions(client PUBLIC -DENABLE_DEBUGING)
endif()