add_executable(lemma_server main.cpp Settings.cpp LemmaServer.cpp Server.cpp)

target_link_libraries(lemma_server Lib)
target_compile_definitions(lemma_server PRIVATE -DSMTS_VERSION=${SMTS_VERSION})
if(DEBUG_SMTS)
    target_compile_definitions(lemma_server PUBLIC -DENABLE_DEBUGING)
endif()
if (SQLITE3_FOUND)
    target_compile_definitions(lemma_server PUBLIC -DSQLITE_IS_ON)
endif()